add class module
