# docs/swagger.json
@@ -27,21 +27,8 @@
                     },
                     {
                         "type": "string",
-                        "format": "email",
-                        "description": "需要查询的邮箱",
-                        "name": "queryemail",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
                         "description": "需要查询ID",
                         "name": "id",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
-                        "description": "需要查询用户名",
-                        "name": "name",
                         "in": "query"
                     }
                 ],
@@ -82,20 +69,13 @@
                     },
                     {
                         "type": "string",
-                        "format": "email",
-                        "description": "需要查询的学生邮箱",
-                        "name": "queryemail",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
                         "description": "需要查询学生ID",
                         "name": "id",
                         "in": "query"
                     },
                     {
                         "type": "string",
-                        "description": "需要查询学生用户名",
+                        "description": "需要修改的学生用户名",
                         "name": "name",
                         "in": "query"
                     },
@@ -243,21 +223,14 @@
                     },
                     {
                         "type": "string",
-                        "format": "email",
-                        "description": "需要查询的学生邮箱",
-                        "name": "queryemail",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
-                        "description": "需要查询学生ID",
+                        "description": "需要查询管理员ID",
                         "name": "id",
                         "in": "query"
                     },
                     {
                         "type": "string",
-                        "description": "需要查询学生用户名",
-                        "name": "name",
+                        "description": "新密码",
+                        "name": "password",
                         "in": "query"
                     }
                 ],
@@ -485,21 +458,8 @@
                     },
                     {
                         "type": "string",
-                        "format": "email",
-                        "description": "需要查询的邮箱",
-                        "name": "queryemail",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
                         "description": "需要查询ID",
                         "name": "id",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
-                        "description": "需要查询用户名",
-                        "name": "name",
                         "in": "query"
                     }
                 ],
@@ -540,20 +500,13 @@
                     },
                     {
                         "type": "string",
-                        "format": "email",
-                        "description": "需要查询的学生邮箱",
-                        "name": "queryemail",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
                         "description": "需要查询学生ID",
                         "name": "id",
                         "in": "query"
                     },
                     {
                         "type": "string",
-                        "description": "需要查询学生用户名",
+                        "description": "需要修改学生用户名",
                         "name": "name",
                         "in": "query"
                     },
@@ -876,21 +829,8 @@
                     },
                     {
                         "type": "string",
-                        "format": "email",
-                        "description": "需要查询的学生邮箱",
-                        "name": "queryemail",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
                         "description": "需要查询学生ID",
                         "name": "id",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
-                        "description": "需要查询学生用户名",
-                        "name": "name",
                         "in": "query"
                     },
                     {
@@ -1046,21 +986,8 @@
                     },
                     {
                         "type": "string",
-                        "format": "email",
-                        "description": "需要删除的邮箱",
-                        "name": "queryemail",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
                         "description": "需要删除ID",
                         "name": "id",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
-                        "description": "需要删除用户名",
-                        "name": "name",
                         "in": "query"
                     }
                 ],
@@ -1101,20 +1028,13 @@
                     },
                     {
                         "type": "string",
-                        "format": "email",
-                        "description": "需要查询的邮箱",
-                        "name": "queryemail",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
                         "description": "需要查询ID",
                         "name": "id",
                         "in": "query"
                     },
                     {
                         "type": "string",
-                        "description": "需要查询用户名",
+                        "description": "需要修改用户名",
                         "name": "name",
                         "in": "query"
                     },
@@ -1365,21 +1285,8 @@
                     },
                     {
                         "type": "string",
-                        "format": "email",
-                        "description": "需要查询的学生邮箱",
-                        "name": "queryemail",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
                         "description": "需要查询学生ID",
                         "name": "id",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
-                        "description": "需要查询学生用户名",
-                        "name": "name",
                         "in": "query"
                     },
                     {
@@ -1559,7 +1466,7 @@
         },
         "/authrequired/classes": {
             "get": {
-                "description": "管理员所有班级",
+                "description": "获取所有班级",
                 "consumes": [
                     "application/json"
                 ],
@@ -1567,9 +1474,9 @@
                     "application/json"
                 ],
                 "tags": [
-                    "classAdmin"
+                    "auth"
                 ],
-                "summary": "管理员所有班级",
+                "summary": "获取所有班级",
                 "parameters": [
                     {
                         "type": "string",
@@ -1605,7 +1512,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "classTeacher"
+                    "classStudent"
                 ],
                 "summary": "学生加入班级",
                 "parameters": [
@@ -1649,7 +1556,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "classTeacher"
+                    "classStudent"
                 ],
                 "summary": "学生离开班级",
                 "parameters": [
@@ -1850,7 +1757,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "classTeacher"
+                    "classStudent"
                 ],
                 "summary": "学生修改班级",
                 "parameters": [
